--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
 .jumbotron {
   margin: 0px auto;
   padding: 70px 30px;
-  background: #9575CD;
+  background: #703ace;
   color: floralwhite; }
 
 address {
@@ -28,8 +28,8 @@ body {
   padding: 50px 0px 0px 0px;
   z-index: 0; }
 
-.navbar-dark {
-  background-color: #512DAB; }
+.navbar-inverse {
+  background-color: #512DA8; }
 
 .tab-content {
   border-left: 1px solid #ddd;
@@ -38,7 +38,7 @@ body {
   padding: 10px; }
 
 .carousel {
-  background: #512DAB; }
+  background: #512DA8; }
   .carousel .carousel-item {
     height: 300px; }
     .carousel .carousel-item img {
@@ -47,7 +47,21 @@ body {
       left: 0;
       min-height: 300px; }
 
-#carouselButton {
+#carousel-button {
   right: 0px;
   position: absolute;
   bottom: 0px; }
+
+.modal-content .modal-header {
+  background: #512DA8;
+  color: floralwhite;
+  border-bottom: none; }
+  .modal-content .modal-header .close {
+    color: floralwhite; }
+
+.modal-content .modal-body {
+  background: #D1C4E9; }
+
+.modal-content .modal-footer {
+  background: #703ace;
+  border-top: none; }
