--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,52 +1,50 @@
 $lt-gray: #ddd;
-$background-dark: #512DAB;
-$background-light: #9575CD;
+$background-dark: #512DA8;
+$background-light: #703ace;
 $background-pale: #D1C4E9;
 
 // Height variables
-$carousel-item-height: 300px;  
+$carousel-item-height: 300px;
 
 @mixin zero-margin($pad-up-dn, $pad-left-right) {
-    margin: 0px auto;
-    padding: $pad-up-dn $pad-left-right;
+	margin:0px auto;
+	padding: $pad-up-dn $pad-left-right;
 }
 
-.row-header {
-    @include zero-margin(0px, 0px);
+.row-header{
+    @include zero-margin(0px,0px);
 }
 
 .row-content {
-    @include zero-margin(50px, 0px);
+    @include zero-margin(50px,0px);
     border-bottom: 1px ridge;
-    min-height: 400px;
+    min-height:400px;
 }
 
-.footer {
+.footer{
     background-color: $background-pale;
     @include zero-margin(20px, 0px);
 }
-
 .jumbotron {
-    @include zero-margin(70px, 30px);
-    background: $background-light; 
-    color: floralwhite;
+    @include zero-margin(70px,30px);
+    background: $background-light ;
+    color:floralwhite;
 }
 
-address {
-    font-size: 80%;
-    margin: 0px;
-    color: #0f0f0f;
+address{
+    font-size:80%;
+    margin:0px;
+    color:#0f0f0f;
 }
 
-body {
-    padding: 50px 0px 0px 0px;
-    z-index: 0;
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
 }
 
-.navbar-dark {
-    background-color: $background-dark;
+.navbar-inverse {
+     background-color: $background-dark;
 }
-
 .tab-content {
     border-left: 1px solid $lt-gray;
     border-right: 1px solid $lt-gray;
@@ -55,11 +53,10 @@ body {
 }
 
 .carousel {
-    background: $background-dark;
+    background:$background-dark;
 
     .carousel-item {
         height: $carousel-item-height;
-
         img {
             position: absolute;
             top: 0;
@@ -68,9 +65,29 @@ body {
         }
     }
 }
-
-#carouselButton {
-    right: 0px;
+#carousel-button {
+    right:0px;
     position: absolute;
     bottom: 0px;
+}
+
+.modal-content {
+	.modal-header {
+		background:$background-dark;
+		color:floralwhite;
+		border-bottom: none;
+
+		.close {
+			color:floralwhite;
+		}
+	}
+
+	.modal-body {
+		background:$background-pale;
+	}
+
+	.modal-footer {
+		background:$background-light;
+		border-top: none;
+	}
 }
