--- a/css/styles.less
+++ b/css/styles.less
@@ -1,5 +1,5 @@
 @lt-gray: #ddd;
-@background-dark: #512DAB;
+@background-dark: #512DA8;
 @background-light: #9575CD;
 @background-pale: #D1C4E9;
 
@@ -73,4 +73,5 @@ body {
     right: 0px;
     position: absolute;
     bottom: 0px;
+    z-index: 1;
 }
