--- a/css/styles.scss
+++ b/css/styles.scss
@@ -42,6 +42,10 @@ body{
     z-index:0;
 }
 
+.navbar-dark {
+    background-color: $background-dark;
+}
+
 .navbar-inverse {
      background-color: $background-dark;
 }
@@ -65,6 +69,14 @@ body{
         }
     }
 }
+
+#carouselButton {
+    right: 0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
+
 #carousel-button {
     right:0px;
     position: absolute;
